--- a/sass/_grid.scss
+++ b/sass/_grid.scss
@@ -7,7 +7,7 @@
 @warn "remove magic numbers";
 
 @mixin page-header {
-  background-color: $page-color-light;
+  background-color: lighten($page-color-light, 10%);
   margin-bottom: 1rem;
 
   h1,
